data/derived/comb/progs/unify/prog1108.ml.out
Characters 49-58:
  let fixpoint (f,b) = wwhile(let k x = f x = x in (x, x!=x), b);;
                                                   ^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
